katalog/tests/calico/resources/2000.deny-all.yaml
# Copyright (c) 2022 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: deny-all
spec:
  order: 2000
  selector: projectcalico.org/namespace not in {'default', 'ingress-nginx', 'istio-system', 'kube-system', 'logging', 'monitoring', 'registry','gatekeeper-system','cert-manager','calico-system'}
  ingress:
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name in {'default', 'ingress-nginx', 'istio-system', 'kube-system', 'logging', 'monitoring', 'registry','gatekeeper-system','cert-manager','calico-system'}
  egress:
    - action: Allow # System namespace traffic
      destination:
        namespaceSelector: projectcalico.org/name in {'default', 'ingress-nginx', 'kube-system', 'istio-system', 'monitoring','calico-system'}

  types:
    - Ingress
    - Egress
